set(LIB_URING ${PROJECT_SOURCE_DIR}/third_party/liburing)
if(NOT IS_DIRECTORY "${LIB_URING}")
    include(io_uring)
endif()
file(GLOB SOURCE_FILES "*.cpp")
add_executable(demo_aio ${SOURCE_FILES})
target_include_directories(demo_aio SYSTEM PRIVATE ${LIB_URING}/include)
target_link_directories(demo_aio PRIVATE ${LIB_URING}/lib)
target_link_libraries(demo_aio PRIVATE uring)